--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@ Problem-Solving ,</li>
         </div>
         <div class="tab-contents" id="Experience"> 
             <ul>
-                <li> <span> UI/UX </span> <br> WEB DEVELOPMENT </li>
-                    <li> <span> WEB DEVELOPMENT</span><br> WEB APP DEVELOPMENT  </li>
-                        <li> <span> APP DEVELOPMENT</span> <br> BUIDING ANDRIOD </li>
-
+		    <li> <span> Content creator </span> <br> https://blog.medixab.com// <li>
+        
+                    <li> <span> WEB DEVELOPMENT</span><br> https://netlify.aigtechresource.com </li>
+                        
 
 
 
