--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ WASSCE (2006 – 2012)</li>
                     <a href="https://www.facebook.com/adeshigbin.oyindamola/"><i class="fa-brands fa-facebook"></i></a>
                     <a href="#"><i class="fa-brands fa-twitter"></i></a>
                     <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/ajarat-adeshigbi-b18927219"><i class="fa-brands fa-linkedin"></i></a>
                     <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="ajarat-adeshigbin-720885279" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://ng.linkedin.com/in/ajarat-adeshigbin-720885279?trk=profile-badge">AJARAT ADESHIGBIN</a></div>
               
                     
