--- a/index.html
+++ b/index.html
@@ -47,10 +47,14 @@
 <div class="about-col-2">
     <h1 class="sub-titles"> About me </h1> 
 
-    <p>I am a Creative and Skilled Front End Developer with 3 years experience, in Web development and maintaining responsive websites in the recruiting industry. Proficient in HTML, CSS, jQuery, JavaScript, and phyton; in addition to modern libraries and frameworks. <br>
-
-I also have strong skills and expertise in usability and possess working knowledge of Adobe Photoshop,Corel draw ,Excel,Powerpiont.  </p>
-            
+    <p>Experienced front-end web developer with over three years of expertise in JavaScript, 
+HTML5, and CSS, focusing on enhancing user experiences and interfaces for 
+client-facing pages. Proficient in WordPress, SEO optimization, and graphic design. 
+Demonstrates strong skills in Microsoft Word, Excel, and PowerPoint. Skilled in 
+resolving customer issues efficiently and balancing technical and marketing aspects 
+of electronics. Seeking to leverage my abilities to contribute to organizational 
+goals by designing and maintaining diverse company websites, including marketing, 
+promotional, blog, sales, and customer service platforms.</p>
             
             <div class="tab-tittles">
                 <p class ="tab-links active-link" onclick="opentab('skills')"> Skills</p>
