--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ WASSCE (2006 – 2012)</li>
         <div class="layer">
             <h3> Online shop</h3>
             <p> The app conect yoiu to trained proffesionALS ALL OVER THE WORLD</p>
-            <a href="#"><i class="fas fa-external-link-alt"></i></a>
+            <a href="https://fenestrationintegratedserviceslimited.com    "><i class="fas fa-external-link-alt"></i></a>
         </div>
     </div>
     <div class="work">
