--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                         <a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                         <a href="https://www.linkedin.com/in/ajarat-adeshigbi-b18927219/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
-                    <a href="images/oyindamola_latest_cv.docx" download class="btn btn2">Download CV</a>
+                    <a href="images/ADESHIGBIN OYINDAMOLA WEB CV" download class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right">
                     <form action="https://formspree.io/f/xeqwyzbr" method="POST">
