--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+'<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -41,8 +41,13 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-titles">About Me</h1>
-                    <p>Website Designer & Digital Marketing Specialist .</p>
-
+                    <p>Highly motivated and results-oriented Website Designer & Digital Marketing Specialist
+			    with proven expertise in creating engaging websites, landing pages, 
+			    and digital content. Proficient in WordPress, HTML, CSS, and Figma,
+			    with a strong understanding of SEO principles and email marketing strategies.
+			    Proven ability to drive user engagement, increase conversions,
+			    and enhance online visibility through data-driven decisions and creative design solutions. .</p>
+ 
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links" onclick="opentab('experience')">Experience</p>
@@ -61,7 +66,7 @@
                             <li>Data Analysis: Microsoft Excel, Microsoft Power BI. 
 </li>
                             <li>Other: Project Management, Communication (Written & Verbal), 
-				    <BR>Teamwork, Problem-Solving , Time Management,
+				    <BR>Teamwork, Problem-Solving , Time Management, </li>
 
                         </ul>
                     </div>
@@ -154,7 +159,7 @@
                         <a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                         <a href="https://www.linkedin.com/in/ajarat-adeshigbi-b18927219/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
-                    <a href="images/my-cv.pdf" download class="btn btn2">Download CV</a>
+                    <a href="images/my-cv.pdf.pdf" download class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right">
                     <form action="https://formspree.io/f/xeqwyzbr" method="POST">
