--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <ul>
 				<li><span>Website Designer</span><br><a href="https://nigerianfoodfair.com.ng" target="_blank">NIGERIAN fOOD fair</a></li>
                             <li><span>Website Designer</span><br><a href="https://fenestrationintegratedserviceslimited.com" target="_blank">Fenestration Integrated Services</a></li>
-                            <li><span>Website Designer</span><br><a href="https://tassgroupofschools.com" target="_blank">TASS Group of Schools</a></li>
+                            <li><span>Website Designer</span><br><a href="https://taasgroupofschools.com" target="_blank">TASS Group of Schools</a></li>
                             <li><span>Content Creator</span><br><a href="https://blog.medixab.com" target="_blank">Medixab Blog</a></li>
                             <li><span>Web Developer</span><br><a href="https://netlify.aigtechresource.com" target="_blank">AIG Tech Resource</a></li>
                         </ul>
