--- a/index.html
+++ b/index.html
@@ -73,11 +73,50 @@
 
                     <div class="tab-contents" id="experience">
                         <ul>
-				<li><span>Website Designer</span><br><a href="https://nigerianfoodfair.com.ng" target="_blank">NIGERIAN fOOD fair</a></li>
-                            <li><span>Website Designer</span><br><a href="https://fenestrationintegratedserviceslimited.com" target="_blank">Fenestration Integrated Services</a></li>
-                            <li><span>Website Designer</span><br><a href="https://taasgroupofschools.com" target="_blank">TASS Group of Schools</a></li>
-                            <li><span>Content Creator</span><br><a href="https://blog.medixab.com" target="_blank">Medixab Blog</a></li>
-                            <li><span>Web Developer</span><br><a href="https://netlify.aigtechresource.com" target="_blank">AIG Tech Resource</a></li>
+				<h2>Work Experience</h2>
+                            <ul>
+                                <li>
+                                    <span class="job-title">Web Developer / Content Creator</span>
+                                    <span class="company">NIGERIAN FOOD FAIR (04/2024 - Present)</span>
+                                    <p>
+                                        Increased website user engagement by 30% through comprehensive website maintenance, development, and optimization of site speed, usability, and overall performance. 
+                                        Led the successful redesign of the company website and developed several impactful microsites, enhancing functionality and user experience, resulting in a 15% rise in customer retention. 
+                                        Developed and executed a robust content strategy, producing high-quality, SEO-optimized content that increased online visibility by 25% and improved organic search rankings. 
+                                        Implemented targeted email marketing campaigns that resulted in a 20% increase in customer engagement and a 12% boost in conversion rates. 
+                                        Managed all aspects of online customer support, providing timely resolutions and improving customer satisfaction ratings by 40%. 
+                                        Utilized Google Analytics to monitor website performance, analyze user behavior, and make data-driven decisions to enhance site metrics.
+                                    </p>
+                                </li>
+                                <li>
+                                    <span class="job-title">Web Developer / Content Creator</span>
+                                    <span class="company">FENESTRATION INTEGRATED SERVICE (04/2023 - Present)</span>
+                                    <p>
+                                        Significantly improved website user engagement by 30% through strategic website maintenance, development, and optimization of site speed and user experience. 
+                                        Successfully led the redesign of the company website and developed several impactful microsites, enhancing functionality and user experience, contributing to a 15% rise in customer retention. 
+                                        Developed and executed a comprehensive content strategy, producing high-quality, SEO-optimized content that increased online visibility by 25% and improved organic search rankings. 
+                                        Implemented targeted email marketing campaigns that resulted in a 20% increase in customer engagement and a 12% boost in conversion rates. 
+                                        Managed all aspects of online customer support, providing timely resolutions and improving customer satisfaction ratings by 40%. 
+                                        Utilized Google Analytics to monitor website performance, analyze user behavior, and make data-driven decisions to enhance site metrics.
+                                    </p>
+                                </li>
+                                <li>
+                                    <span class="job-title">SEO Optimization Specialist & Blog Writer</span>
+                                    <span class="company">MEDIXAB.COM (Remote) (06/2023 - 08/2023)</span>
+                                    <p>
+                                        Conducted in-depth keyword research and implemented comprehensive on-page and off-page SEO strategies, leading to a 35% increase in organic traffic and significant improvement in search engine rankings for key product pages. 
+                                        Wrote and optimized high-quality blog posts on health and wellness topics, enhancing content relevance and driving a 20% increase in website traffic and user engagement. 
+                                        Collaborated with the e-commerce team to develop and implement SEO strategies for product listings, resulting in a 15% increase in online sales. 
+                                        Utilized Google Analytics and SEMrush to track website performance, generate insightful reports, and inform future SEO strategies.
+                                    </p>
+                                </li>
+                                <li>
+                                    <span class="job-title">Web Developer & App Developer</span>
+                                    <span class="company">TASS GROUP OF SCHOOLS (01/2024 - Present)</span>
+                                    <p>
+                                        Designed and maintained the school website, providing comprehensive information on school programs, events, and activities. 
+                                        Developed a user-friendly mobile application to enhance communication and engagement between stakeholders.
+                                    </p>
+                                </li>
                         </ul>
                     </div>
 
